File System Fix

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "type": "module",
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.5",
     "autoprefixer": "^10.4.20",
     "next": "15.1.0",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.1.15",
