--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.5",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "next": "15.1.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.1.15",
-    "tailwindcss-text-fill-stroke": "^1.1.2"
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "postcss": "^8.4.49",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.4.17"
   }
 }
